WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
155550
REGRESSION (
r192184
): CleanMyDrive 2's tutorial window is blank
https://bugs.webkit.org/show_bug.cgi?id=155550
Summary
REGRESSION (r192184): CleanMyDrive 2's tutorial window is blank
Tim Horton
Reported
2016-03-16 11:26:06 PDT
Need to keep _setDrawsTransparentBackground: around and working for now
Attachments
Patch
(1.71 KB, patch)
2016-03-16 11:33 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(1.70 KB, patch)
2016-03-16 11:40 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Patch
(1.91 KB, patch)
2016-03-16 12:15 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2016-03-16 11:33:19 PDT
Created
attachment 274201
[details]
Patch
mitz
Comment 2
2016-03-16 11:35:14 PDT
Comment on
attachment 274201
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=274201&action=review
> Source/WebKit2/ChangeLog:3 > + Need to keep _setDrawsTransparentBackground: around and working for now
A better title here would be “REGRESSION (
r192184
): CleanMyDrive 2's tutorial window is blank”
mitz
Comment 3
2016-03-16 11:36:12 PDT
Comment on
attachment 274201
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=274201&action=review
> Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:4188 > + static bool hasLoggedDeprecationWarning;
Strange mix of C bool…
> Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:4191 > + hasLoggedDeprecationWarning = YES;
…with Objective-C YES.
Tim Horton
Comment 4
2016-03-16 11:37:59 PDT
Comment on
attachment 274201
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=274201&action=review
>> Source/WebKit2/ChangeLog:3 >> + Need to keep _setDrawsTransparentBackground: around and working for now > > A better title here would be “REGRESSION (
r192184
): CleanMyDrive 2's tutorial window is blank”
OK!
>> Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:4191 >> + hasLoggedDeprecationWarning = YES; > > …with Objective-C YES.
Fair!
Tim Horton
Comment 5
2016-03-16 11:40:45 PDT
Created
attachment 274202
[details]
Patch
mitz
Comment 6
2016-03-16 11:42:31 PDT
Comment on
attachment 274202
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=274202&action=review
> Source/WebKit2/ChangeLog:8 > +
Might be useful to explain here how this fixes the bug.
> Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:4188 > + static BOOL hasLoggedDeprecationWarning;
Would be good to have a comment referencing this bug here so that people can easily answer the question why this is here and whether it’s OK to remove it.
Tim Horton
Comment 7
2016-03-16 12:15:07 PDT
Created
attachment 274207
[details]
Patch
WebKit Commit Bot
Comment 8
2016-03-16 13:16:46 PDT
Comment on
attachment 274207
[details]
Patch Clearing flags on attachment: 274207 Committed
r198298
: <
http://trac.webkit.org/changeset/198298
>
WebKit Commit Bot
Comment 9
2016-03-16 13:16:50 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug