REGRESSION (r192184): CleanMyDrive 2's tutorial window is blank https://bugs.webkit.org/show_bug.cgi?id=155550 <rdar://problem/24250689>

Reviewed by Dan Bernstein.

* UIProcess/API/Cocoa/WKWebView.mm:
(-[WKWebView _setDrawsTransparentBackground:]):
The app is using this SPI via key-value coding, so just keeping the implementation
is sufficient to make AppKit stop throwing an undefined key exception.
Log once that this is deprecated (... it's also SPI) and then forward to setDrawsBackground.


Canonical link: https://commits.webkit.org/173676@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@198298 268f45cc-cd09-0410-ab3c-d52691b4dbfc